adds new theory about using this after tutor help

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             <div class="container">
               <h1 class="display-4">Fluid jumbotron</h1>
               <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-              <div id="current-time"></div>
               <div id="current-day"></div>
             </div>
           </div>
@@ -27,7 +26,7 @@
 
         <div class="container time-block">
             <div class="row">
-              <div class="col-md-1" id="hour" value="22">10PM</div>
+              <div class="col-md-1" id="hour8">8AM</div>
               <textarea class="col-md-10 description"></textarea>
               <button class="col-md-1 btn saveBtn save"><i class="far fa-save"></i></button>
             </div>
@@ -35,7 +34,7 @@
 
         <div class="container time-block">
           <div class="row">
-            <div class="col-md-1" id="hour" value="23">11PM</div>
+            <div class="col-md-1" id="hour11">11PM</div>
             <textarea class="col-md-10 description"></textarea>
             <button class="col-md-1 btn saveBtn save"><i class="far fa-save"></i></button>
           </div>
